# ai-news-project

./: .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: ai.py  database.py  models.py  youtube.py
backend/: README.md  pyproject.toml
backend/src/ai_news_project/: ai.py  database.py  main.py  models.py  news.py  youtube.py
backend/tests/: test_ai.py  test_package_layout.py  test_youtube.py  test_youtube_summary_route.py
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/components/: summary-card.tsx  summary-metrics.tsx
frontend/src/components/ui/: alert.tsx  button.tsx  input.tsx
frontend/src/lib/: youtube-summary-api.test.ts  youtube-summary-api.ts
frontend/src/pages/: summaries-page.test.tsx  summaries-page.tsx
scripts/: dev.sh
tests/: dev_test.sh  test_ai.py  test_youtube.py  test_youtube_summary_route.py
